--- a/web/css/main.css
+++ b/web/css/main.css
@@ -294,19 +294,19 @@ body {
 }
 
 #btn-a {
-    top: 50%;
+    top: 23%;
     right: 0;
 
     transform: translateY(-50%);
     -webkit-transform: translateY(-50%);
     -moz-transform: translateY(-50%);
 
-    background-image: url('/static/img/ui/bt A.png');
+    background-image: url('/static/img/ui/bt C.png');
 }
 
 
 #btn-b {
-    bottom: 0;
+    top: 20%;
     left: 50%;
 
     transform: translateX(-50%);
@@ -334,7 +334,7 @@ body {
     -webkit-transform: translateY(-50%);
     -moz-transform: translateY(-50%);
 
-    background-image: url('/static/img/ui/bt Y.png');
+    background-image: url('/static/img/ui/bt A.png');
 }
 
 #btn-settings {
